--- a/index.ipynb
+++ b/index.ipynb
@@ -402,22 +402,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 16384]"
+       "[8, 1024, 2097152]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(pow, [2, 4, 8], [3, 7]))"
+    "list(map(pow, [2, 4, 8], [3, 5, 7]))"
    ]
   },
   {
